--- a/src/javaticket/Login.form
+++ b/src/javaticket/Login.form
@@ -142,7 +142,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="UserPassword">
           <Properties>
-            <Property name="text" type="java.lang.String" value="admin"/>
+            <Property name="text" type="java.lang.String" value="supersecreto"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UserPasswordActionPerformed"/>
